--- a/website/collection/cats/index.html
+++ b/website/collection/cats/index.html
@@ -48,9 +48,9 @@
 
 		<!--column 2-->
 		<div class="column">
-			<img src="!g/buenosdias.jpeg">
+			<img src="!g/buenosdias.jpeg" alt="buenos dias">
 			<img src="!g/cat-angel.gif">
-			<img src="!g/freddy-jumpscare.gif">
+			<img src="!g/freddy-jumpscare.gif" alt="mr shock and freddy">
 			<img src="!g/funfact.jpg">
 			<img src="!g/gasp.jpg">
 			<img src="!g/gatoempanada.jpg">
