journal quick fixes

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -35,6 +35,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<img src="/!g/deco/diary.gif">
 			<p>a place where i talk about what's going on in my life and about my site!</p>
 			<p><a href="credit.html" target="iframe_a">credit</a> for materials used</p>
+			<small class="sticky">all sticky notes are draggable!</small>
 			<details>
 				<summary>journal content notes</summary>
 				<p>there is a genuine effort for these to be as coherent as possible, i don't exactly like to ramble in here about whatever, i leave that for my <a href="https://doqmeat.blog.fc2.com" target="_blank">FC2 microblog</a> ^_^</p>
@@ -61,11 +62,10 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 				<a href="2023/05.html" target="iframe_a">may</a>
 				<a href="2023/04.html" target="iframe_a">april</a>
 			</details>
-			<small class="sticky">all sticky notes are draggable!</small>
 		</nav>
 
 		<main>
-			<iframe src="2024/03.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
+			<iframe id="journal" src="2024/03.html" name="iframe_a" height="100%" width="100%"></iframe>
 		</main>
 	</div>
 
