webgarden quick fixes

--- a/website/webgarden/greenhouse.html
+++ b/website/webgarden/greenhouse.html
@@ -4,28 +4,16 @@
 <head>
 	<!-- coded with love by des  -->
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>greenhouse</title>
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
 	<link href="greenhouse.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 </head>
 
@@ -118,10 +106,6 @@
 	</div>
 
 	<div class="snowflakes">
-		<!-- template
-<div class="snowflake"><img src=""></div> 
--->
-
 		<div class="snowflake"><img src="/!g/pix/flowers234.gif"></div>
 		<div class="snowflake"><img src="/!g/pix/blog.gif"></div>
 		<div class="snowflake"><img src="/!g/pix/flowerpink.gif"></div>
