--- a/website/webgarden/index.html
+++ b/website/webgarden/index.html
@@ -2,31 +2,15 @@
 <html lang="en">
 
 <head>
-	<!-- 
-coded with love by des  
- -->
+	<!-- coded with love by des  -->
 	<meta charset="UTF-8">
 	<title>webgarden pot</title>
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
-	<!--  end of tooltip shit -->
+	<script src="/!f/tooltip.js"></script>
 	<script type="text/javascript">
 		// rainbow link code----------------------------------------
 
