--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -4,7 +4,7 @@
 <head>
 	<!-- coded with love by des  -->
 	<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>button wall</title>
 	<link rel="icon" type="image/x-icon" href="https://doqmeat.neocities.org/!g/pix/puter.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
@@ -148,7 +148,7 @@
 			<a title="kyu - their art radiates such a warm feeling on me.... idk but i really love it here" href="https://kyu.neocities.org" target="_blank"><img src="!g/kyu.gif"></a>
 			<a title="alexandra - AWESOME site with so many links and things to read!" href="https://xandra.cc/" target="_blank"><img src="!g/xandra.png"></a>
 			<a title="leviathren - very cool site. im a big enjoyer of the different themes" href="https://leviathren.neocities.org/" target="_blank"><img src="!g/leviathren.gif"></a>
-			<a title="kengo - nice and minimalistic site" href="https://kengo.neocities.org/" target="_blank"><img src="!g/kengo.png"></a>
+			<a title="aubr" href="https://aubr.neocities.org"><img src="https://aubr.neocities.org/aubr.png"></a>
 			<a title="dreambubble - cool site filled with pixels and interesting pages!" href="https://dreambubble.neocities.org/" target="_blank"><img src="!g/dreambubble.gif"></a>
 			<a title="seven - super charming" href="https://halcyyyon.neocities.org/" target="_blank"><img src="!g/halcyyyon.gif"></a>
 			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/doubleincision.png"></a>
@@ -343,6 +343,7 @@
 			<a title="cora - cute site!! i love the cats around this site" href="https://realitv.neocities.org" target="_blank"><img src="!g/realitv.gif"></a>
 			<a title="nyatchi - such a cute layout" href="https://nyatchi.neocities.org" target="_blank"><img src="!g/nyatchi.gif"></a>
 			<a title="a0i - LOVELY layout designs" href="https://hatsu.neocities.org/" target="_blank"><img src="!g/hatsu.png" alt="hatsu"></a>
+			<a title="kengo - nice and minimalistic site" href="https://kengo.neocities.org/" target="_blank"><img src="!g/kengo.png"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
