--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -34,16 +34,15 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 			<h1>des' journal</h1>
 			<img src="/!g/deco/diary.gif">
 			<p>a place where i talk about what's going on in my life and about my site!</p>
-			<p><a href="credit.html" target="iframe_a">credit</a> for materials used</p>
 			<small class="sticky">all sticky notes are draggable!</small>
 			<details>
 				<summary>journal content notes</summary>
-				<p>there is a genuine effort for these to be as coherent as possible, i don't exactly like to ramble in here about whatever, i leave that for my <a href="https://doqmeat.blog.fc2.com" target="_blank">FC2 microblog</a> ^_^</p>
+				<p>there is a genuine effort for these to be as coherent as possible, i don't exactly like to ramble in here about whatever, i leave that for my <a href="https://doqmeat.blog.fc2.com" target="iframe_a">FC2 microblog</a> ^_^</p>
 				<p>i don't want to treat this journal as a vent dump, or be overly negative. but i do be having bad times. anything of those topics will have <mark>content warnings</mark> at the start of the entry.</p>
 			</details>
-			<br>
-			<img src="/!g/deco/pencil1.gif">
-			<br>
+			<p><a href="credit.html" target="iframe_a">credit</a> / <a title="hosted on FC2, but will pop up in the iframe :)" href="https://doqmeat.blog.fc2.com" target="iframe_a">microblog</a></p>
+			<img src="/!g/deco/pencil1.gif" width="40%">
+
 			<details open>
 				<summary>2024</summary>
 				<a href="2024/03.html" target="iframe_a">march</a>
@@ -62,6 +61,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 				<a href="2023/05.html" target="iframe_a">may</a>
 				<a href="2023/04.html" target="iframe_a">april</a>
 			</details>
+
 		</nav>
 
 		<main>
@@ -76,10 +76,11 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 
 	<aside id="memo1" class="memo draggable">
 		<div class="innermemo">
+			<h3 style="margin:10px;">status.cafe</h3>
 			<!-- start sw-rss-feed code -->
 			<script type="text/javascript" src="status-cafe-feed.js"></script>
 			<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
-			<span style="font-size:small;"><a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a> feed powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></span>
+			<span style="font-size:small;">feed powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank">Surfing Waves</a></span>
 		</div>
 	</aside>
 
@@ -127,8 +128,8 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 
 	<aside id="memo4" class="memo draggable">
 		<div class="innermemo">
-			<h3 style="text-align: center;margin:3px;"><a href="https://doqmeat.blog.fc2.com/" title="hosted on FC2, updated frequently bc i can't stfu" target="_blank" style="text-decoration: none;">des' microblog</a></h3>
-			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.blog.fc2.com%2F%3Fxml&showtitle=false&type=js"></script>
+			<h3 style="margin:5px;"><img src="/!g/pix/cam-shoot.gif" alt="emoticon"> piclog</h3>
+			<a href="https://piclog.blue/profile.php?id=51"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
 		</div>
 	</aside>
 
