--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -178,6 +178,7 @@
 			<a title="cloverbell - one of my fav websites ever omg" href="https://cloverbell.neocities.org/" target="_blank"><img src="https://cloverbell.neocities.org/n_n/cloverbell.gif"></a>
 			<a title="johndavis" href="https://johndavid.neocities.org/" target="_blank"><img src="!g/johndavid.webp"></a>
 			<a title="traumagotchi" href="https://traumagotchi.neocities.org" target="_blank"><img src="!g/traumagotchi.gif" alt="traumagotchi"></a>
+			<a title="fairygore - magical site! it makes me feel like i am lost in a forest" href="https://fairygore.neocities.org" target="_blank"><img src="!g/fairygore.png" alt="fairygore"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
