--- a/website/journal/credit.html
+++ b/website/journal/credit.html
@@ -14,6 +14,7 @@
 <body>
 	<div id="log">
 		<h1 style="margin: 20px 25px;">journal credits</h1>
+		<p><a href="/notebook/links/fonts">fonts</a> used: morningtea, gaegu</p>
 		<p>cute memo scans by <a href="https://www.flickr.com/photos/kawaiiscans/" target="_blank">kawaiiscans</a></p>
 		<p><a href="https://pastebin.com/PiDgrv3J" target="_blank">music player</a> code is by <a href="https://adilene.net/" target="_blank">adilene.net</a></p>
 		<p>blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></p>
