--- a/website/home.html
+++ b/website/home.html
@@ -130,6 +130,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>11.mar.24 - <a href="/scrapbook/2024#mar">march</a> scrapbook page created!</li>
 			<li>07.mar.24 - new <a href="/journal">journal log</a>!</li>
 			<li>01.mar.24 - <a href="/journal">journal</a> v3 out!</li>
 			<li>25.feb.24 - added <a href="/scrapbook/2024/index.html#feb">february</a> to 2024 scrapbook</li>
