--- a/website/home.html
+++ b/website/home.html
@@ -118,18 +118,19 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> a little bit of <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
+			<p><span class="hl">playing:</span> paranormasight, <a href="/vgs/a-little-to-the-left">a little to the left</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
-				fujimoto (update: i have caught up with CSM :'))</p>
+				fujimoto</p>
 			<p><span class="hl">watching:</span> the same 5 blu-rays i own over and over again</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> making my apartment pretty! also studying</p>
-			<p><span class="hl">coding/writing:</span> nothing atm</p>
-			<p class="date">last updated on 03.mar.24</p>
+			<p><span class="hl">working on:</span> my apartment (‾◡◝) also studying</p>
+			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
+			<p class="date">last updated on 17.mar.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>17.mar.24 - big update to <a href="/music/listening-log/2024/winter.html">listening log</a> before winter ends officially!</li>
 			<li>11.mar.24 - <a href="/scrapbook/2024#mar">march</a> scrapbook page created!</li>
 			<li>07.mar.24 - new <a href="/journal">journal log</a>!</li>
 			<li>01.mar.24 - <a href="/journal">journal</a> v3 out!</li>
