updated listening log index

--- a/website/music/listening-log/index.html
+++ b/website/music/listening-log/index.html
@@ -53,6 +53,11 @@
 		<h4>all logs</h4>
 		<details>
 			<summary>if you're looking for a specific album or artist just hit that CTRL + F and search away :D</summary>
+			<p><a href="2024/winter.html#5">the time machine school</a> - kinoue64</p>
+			<p><a href="#4">p.h.</a> - seventhlinks</p>
+			<p><a href="2024/winter.html#3">worm in the apple</a> - youra</p>
+			<p><a href="2024/winter.html#2">am i sinking or am i swimming?</a> - late night drive home</p>
+			<p><a href="2024/winter.html#1">나는야 찌질이 (i'm a loser)</a> - hongbi</p>
 			<p><a href="2023/12.html#3">yume no manimani</a> - weevildoing</p>
 			<p><a href="2023/12.html#2">delulu</a> - lexie liu</p>
 			<p><a href="2023/12.html#1">time-lapse</a> - yukika</p>
