updated music index

--- a/website/music/index.html
+++ b/website/music/index.html
@@ -29,7 +29,7 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
-				<b>24.feb.24</b> - <a href="listening-log/2024/winter.html">winder 2024 listening log</a> created - new featured song &amp; album!
+				<b>17.mar.24</b> - big update to <a href="listening-log/2024/winter.html">2024 winter</a> listening log! before winter ends officially ... lol
 			</marquee>
 		</div>
 
