button wall update

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -179,6 +179,7 @@
 			<a title="johndavis" href="https://johndavid.neocities.org/" target="_blank"><img src="!g/johndavid.webp"></a>
 			<a title="traumagotchi" href="https://traumagotchi.neocities.org" target="_blank"><img src="!g/traumagotchi.gif" alt="traumagotchi"></a>
 			<a title="fairygore - magical site! it makes me feel like i am lost in a forest" href="https://fairygore.neocities.org" target="_blank"><img src="!g/fairygore.png" alt="fairygore"></a>
+			<a title="ames" href="https://tthumbelina.neocities.org/" target="_blank"> <img src="!g/tthumbelina.GIF"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
