added mizu pic to shrine

--- a/website/shrines/mizu/index.html
+++ b/website/shrines/mizu/index.html
@@ -235,7 +235,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 			<div class="container">
 				<!--			column 1-->
 				<div class="column">
-
+					<img title="on top of my mom's laptop" src="!g/mizu-on-laptop.jpg">
 					<img title="chillin on my desk" src="!g/onmydesk.jpg">
 					<img title="bro thinks hes a lion lol" src="!g/cubbie.jpg">
 					<img src="!g/why-is-he-so-handsome.jpg">
@@ -266,7 +266,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 		</div>
 
 		<div id="footer" class="text-bbl">
-			<p>last updated: 25.jan.24</p>
+			<p>last updated: 20.mar.24</p>
 			<p><b>resources used in this page:</b> cursor from <a href="https://www.cursors-4u.com" target="_blank">cursors 4u</a>, basiic font by <a href="https://cinni.net/?z=/font" target="_blank">cinni</a></p>
 		</div>
 
