prsk log + imgs

--- a/website/vgs/prsk/index.html
+++ b/website/vgs/prsk/index.html
@@ -1,60 +1,56 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8"> 
-<title>project sekai</title>
-<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
-<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
-<!-- tooltip shit -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-<script>
-							(function($){
-							$(document).ready(function(){
-							$("[title]").style_my_tooltips({
-							tip_follows_cursor: true,
-							tip_delay_time:10,
-							tip_fade_speed:10,
-							attribute:"title"
-							});
-							});
-							})(jQuery);
-</script>
-<!--  end of tooltip shit -->
-  </head>
-  <body>
 
-<div id="iframepc">
-<h2>hatsune miku: colorful stage (aka project sekai)</h2>
-<div class="info"><b>release date: </b> sep 30, 2020</div>
-<div class="info"><b>developer: </b> crypton future media</div>
-<div class="info"><b>genre/type: </b> rhythm, visual novel, gacha</div>
-<h3>logs</h3>
-<p>okay the rumors are true. i enjoy playing the hatsune miku rhythm gacha game <img src="/!g/pix/catblink.gif"> tbh as long as i dont spent a single dollar on it we are chilling <img src="/!g/pix/emote2thumbup.gif">
-<p>been playing it on and off for a couple of months now! <mark>i play on english servers</mark>. i really enjoy the rhythm and visual novel aspect of it tbh. now whenever i just wanna numb my brain for a bit i just open this app instead of twitter, it has worked wonders <sub>[14.jul.23]</sub>
-<hr>
+<head>
+	<meta charset="UTF-8">
+	<title>project sekai</title>
+	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
+	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
+	<!-- tooltip shit -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
+	<!--  end of tooltip shit -->
+</head>
 
-<h4>fav groups and charas</h4>
-<p><u>fav groups</u> are <b>vivid bad squad</b> and <b>nightcord</b>
-<br><u>fav charas</u> are <b>kohane</b> and <b>an</b> (DO NOT SEPERATE), emu, mizuki, and some others but i dont remember their names atm *crying*
+<body>
 
-<h4>fav cards i have</h4>
-<p>honestly some of these are so fucking pretty like wow
-	<img title="[feelings that i've realized]" src="mizukicard1.jpg" width="100%">
-	<img title="[what the hanged girl saw]" src="card2.jpg" width="100%">
-	
-<h4>other screenshots</h4>
-	<p>my phone overheats like crazy whenever i play a damn show</p>
-<img title="i loved these outfits a lot they are so prettyyy" src="show3.jpg" width="100%">
-	<img src="show2.jpg" width="100%">
-	<img title="miku ^-^" src="show1.jpg" width="100%">
-<hr>
-	<img title="i love this little freak" src="prsk1.jpg" width="100%">
+	<div id="iframepc">
+		<h1>project sekai</h1>
+		<div class="info"><b>release date: </b> sep 30, 2020</div>
+		<div class="info"><b>developer: </b> crypton future media</div>
+		<div class="info"><b>genre/type: </b> rhythm, visual novel, gacha</div>
+		<p><small>officially known as <u>hatsune miku: colorful stage</u> but i prefer project sekai.</small></p>
+		<h3>logs</h3>
+		<p>okay the rumors are true. i enjoy playing the hatsune miku rhythm gacha game <img src="/!g/pix/catblink.gif"> tbh as long as i dont spent a single dollar on it we are chilling <img src="/!g/pix/emote2thumbup.gif"></p>
+		<p><span class="date">14.jul.23</span> been playing it on and off for a couple of months now! <mark>i play on english servers</mark>. i really enjoy the rhythm and visual novel aspect of it tbh. now whenever i just wanna numb my brain for a bit i just open this app instead of twitter, it has worked wonders</p>
+		<p><span class="date">21.mar.24</span> they have added 3 siinamota songs AND parley onuma's egoist !!!! so i redownloaded the game again :) i have yet to spend real money on this so we are still Good.</p>
+		<hr>
+
+		<h3>fav groups and charas</h3>
+		<p><u>fav groups</u> are <b>vivid bad squad</b> and <b>nightcord</b></p>
+		<p><u>fav charas</u> are <b>kohane</b> and <b>an</b> (DO NOT SEPERATE), emu, all of nightcord...</p>
+
+		<h4>fav cards that i have</h4>
+		<p>honestly some of these are so fucking pretty like wow</p>
+		<img title="shiho hinomori - [filled with my thanks]" src="card5.jpg" width="100%">
+		<img title="haruka kiritani - [happy birthday! 2023]" src="card4.jpg" width="100%">
+		<img title="kagamine rin - [smile night time!]" src="card3.jpg" width="100%">
+		<img title="mizuki akiyama - [feelings that i've realized]" src="card1.jpg" width="100%">
+		<img title="kanade yoisaki - [what the hanged girl saw]" src="card2.jpg" width="100%">
+
+		<h4>other screenshots</h4>
+		<p>my phone overheats like crazy whenever i play a damn show</p>
+		<img title="i loved these outfits a lot they are so prettyyy" src="show3.jpg" width="100%">
+		<img src="show2.jpg" width="100%">
+		<img title="miku ^-^" src="show1.jpg" width="100%">
+		<hr>
+		<img title="i love this little freak" src="prsk1.jpg" width="100%">
 
 
-</div>
-<footer><a href="/home">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
+	</div>
+	<footer><a href="/home">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
 </body>
+
 </html>
