--- a/website/vgs/info.html
+++ b/website/vgs/info.html
@@ -10,19 +10,7 @@
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 	<style>
 		#iframepc {
@@ -64,6 +52,7 @@
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>21.mar.24 - added: <a href="paranormasight/index.html">paranormasight</a> / log: <a href="prsk/index.html">project sekai</a></li>
 			<li>11.dec.23 - log: <a href="fortnite/index.html#1">fortnite</a>, <a href="bloodborne/index.html#7">bloodborne</a></li>
 			<li>28.nov.23 - updated <a href="fashion-dreamer/index.html">fashion dreamer</a></li>
 			<li>23.nov.23 - updated <a href="fortnite/index.html">fortnite</a> page so now each skin has their own screenshot set :) more organized this way YAY!</li>
@@ -76,6 +65,10 @@
 			<li>23.jul.23 - updated <a href="/vgs/bloodborne">bloodborne</a></li>
 			<li>14.jul.23 - added <a href="/vgs/prsk">project sekai</a></li>
 		</div>
+
+		<h3>credit</h3>
+		<p>heading font is yoster</p>
+		<p>filter by tags JS code from <a href="https://www.w3schools.com/howto/howto_js_filter_elements.asp" target="_blank">w3schools</a></p>
 	</div>
 
 	<footer><a href="/home">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
