--- a/website/home.html
+++ b/website/home.html
@@ -130,6 +130,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>21.mar.24 - updated <a href="/vgs">gaming log</a> with <i>paranormasight</i> and other logs, and <a href="/scrapbook/2024#mar">march scrapbook!</a></li>
 			<li>17.mar.24 - big update to <a href="/music/listening-log/2024/winter.html">listening log</a> before winter ends officially!</li>
 			<li>11.mar.24 - <a href="/scrapbook/2024#mar">march</a> scrapbook page created!</li>
 			<li>07.mar.24 - new <a href="/journal">journal log</a>!</li>
