--- a/website/photobook/index.html
+++ b/website/photobook/index.html
@@ -20,14 +20,12 @@ coded with love by des
 </head>
 
 <body>
-	<div id="home"><a title="go back to homepage" href="/home"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<header>
 		<h1>doqmeat's photobook</h1>
-		<p>my <b>instant film</b> pics are taken with a fujifilm instax mini 26. had it since 2018, works like a charm! both the camera and film it uses are pretty affordable. i love the pics you can get with it so i highly recommend it if you're looking for something to have some fun with</p>
+		<p>my <b>instant film</b> pics are taken with a fujifilm instax mini 26. i've had it since 2018, works like a charm! both the camera and film it uses are pretty affordable. i love the pics you can get with it so i highly recommend it if you're looking for something to have some fun with!</p>
 		<p><b>digital</b> pics are from my shitty android phone *crying* wanna save for a nice digital camera someday!
 		</p>
-		<p><small>entries with multiple pics have a hidden scrollbar!</small></p>
 		<div id="p1"><img src="/!g/deco/instant-pic.gif"></div>
 
 		<div id="p3"><img src="/!g/deco/cam-instant.gif"></div>
@@ -154,7 +152,17 @@ hiii this is a caption
 
 		</div>
 		<!-- 3rd column -->
+
 		<div class="column">
+
+			<div class="pic digi"><img src="!g/240322-pond.jpg">
+				<div class="hov">
+					<div class="caption">
+						a little pond <br> <b>taken on 21.mar.24</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic digi"><img src="!g/231202-caterpillar-flower.jpg">
 				<div class="hov">
 					<div class="caption">while on my walk, i stopped to take a pic of these flowers. when i bend down to take the pic, i noticed the lil caterpillar underneath the leaf :3 what a cutie. <b>taken on 02.dec.23</b></div>
@@ -264,6 +272,9 @@ hiii this is a caption
 		</div>
 		<!-- box end div -->
 	</main>
+
+	<div id="home"><a title="go back to homepage" href="/home"><img src="/!g/pix/polaroid_5.gif"></a></div>
+
 	<footer>
 		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 03.dec.23</b>
 		<br>
